--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/aos": "^3.0.7",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
+    "critters": "^0.0.23",
     "typescript": "^5.9.3"
   }
 }
